--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <li class="nav__item"><a href="page/foods.html">お料理</a></li>
                     <li class="nav__item"><a href="">館内案内</a></li>
                     <li class="nav__item"><a href="page/access.html">アクセス</a></li>
-                    <li class="nav__item"><a href="">Q&A</a></li>
+                    <li class="nav__item"><a href="">FAQ</a></li>
                     <li class=""><a href="#!">|</a></li>
                     <li class="nav__item"><a href="">JP▽</a></li>
                     <li class="header__contact"><a href="page/contact.html">お問い合わせ</a></li>
