--- a/pages/hotspring.html
+++ b/pages/hotspring.html
@@ -66,7 +66,7 @@
                 <li class="footer__nav__item"><a href="#">館内案内</a></li>
                 <li class="footer__nav__item"><a href="#">周辺情報</a></li>
                 <li class="footer__nav__item"><a href="#">アクセス</a></li>
-                <li class="footer__nav__item"><a href="#">よくあるご質問</a></li>
+                <li class="footer__nav__item"><a href="#">FAQ</a></li>
             </ul>
         </div>
         <div class="copyright">
