--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
             <nav class="header__nav">
                 <ul class="nav__wrapper">
                     <li class="nav__item"><a href="">ホーム</a></li>
-                    <li class="nav__item"><a href="page/rooms.html">客室</a></li>
-                    <li class="nav__item"><a href="page/hotspring.html">温泉</a></li>
-                    <li class="nav__item"><a href="page/foods.html">お料理</a></li>
+                    <li class="nav__item"><a href="pages/rooms.html">客室</a></li>
+                    <li class="nav__item"><a href="pages/hotspring.html">温泉</a></li>
+                    <li class="nav__item"><a href="pages/foods.html">お料理</a></li>
                     <li class="nav__item"><a href="">館内案内</a></li>
-                    <li class="nav__item"><a href="page/access.html">アクセス</a></li>
+                    <li class="nav__item"><a href="pages/access.html">アクセス</a></li>
                     <li class="nav__item"><a href="">FAQ</a></li>
                     <li class=""><a href="#!">|</a></li>
                     <li class="nav__item"><a href="">JP▽</a></li>
-                    <li class="header__contact"><a href="page/contact.html">お問い合わせ</a></li>
-                    <li class="header__reserve"><a href="page/reserve.html">ご宿泊予約</a></li>
+                    <li class="header__contact"><a href="pages/contact.html">お問い合わせ</a></li>
+                    <li class="header__reserve"><a href="pages/reserve.html">ご宿泊予約</a></li>
                 </ul>
             </nav>
         </div>
